--- a/app/src/main/res/layout/bluetooth_device_list_item.xml
+++ b/app/src/main/res/layout/bluetooth_device_list_item.xml
@@ -10,10 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingBottom="8dp"
-        android:paddingLeft="12dp"
-        android:paddingRight="12dp"
-        android:paddingTop="8dp">
+        android:paddingBottom="8sp"
+        android:paddingLeft="12sp"
+        android:paddingRight="12sp"
+        android:paddingTop="8sp">
 
         <LinearLayout
             android:layout_width="wrap_content"
