增加了手动断开连接的功能

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,7 +76,7 @@
             android:layout_weight="1"
             android:paddingTop="20sp"
             android:paddingBottom="20sp"
-            android:text="连 接 蓝 牙"
+            android:text="连 接 / 断 开"
             android:layout_gravity="end"
             android:textSize="@dimen/textSize_default"
             />
